@@ -5,7 +5,7 @@
  * @author  Francois Lajoie
  * @version $Id$
  */
-class Peak_View_Helper_TagAttrs
+class Peak_View_Helper_tagAttrs
 {
     /**
      * Attributes
